Fix z-index dropdown, (default value override)

--- a/src/scss/custom/_zindexes.scss
+++ b/src/scss/custom/_zindexes.scss
@@ -1,6 +1,6 @@
 $zindex-accessibility: 1095 !default;
 
-$zindex-dropdown: 2000 !default;
+$zindex-dropdown: 2000;
 
 $zindexes: (
   //  1020
